# stm32f0_basic

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  stm32f0.cfg
.github/workflows/: build-stm32.yml
Drivers/CMSIS/: CMakeLists.txt
Drivers/os/: CMakeLists.txt
Libraries/CMSIS/: CMakeLists.txt
Libraries/STM32F0xx_HAL_Driver/: CMakeLists.txt
Libraries/os/my_files/: chconf.h
Src/: AppContext.hpp  Button.hpp  Controller.hpp  Display.hpp  EventQueue.hpp  FsmTest.hpp  GpioDriver.hpp  GpioDriverCT.hpp  GpioDriverStatic.hpp  IicDriver.hpp  RccDriver.cpp  RccDriver.hpp  Scheduler.hpp  SystemTime.h  ThermostatController.hpp  TimDriver.hpp  TwiDriver.hpp  UartDriver.hpp  UsartDriver.hpp  app.cmake  chlib_stub.c  config.h  ds18b20.c  ds18b20.cpp  ds18b20.hpp  etl_config.h  event_dispatcher.cpp  event_dispatcher.hpp  hardware_init.cpp  ht1621.cpp  ht1621.hpp  macro.h  main.cpp  services_init.cpp  services_init.hpp  src.cmake  stm32f0xx_it.cpp  stm32f0xx_it.hpp  uart.c  uart.cpp  (+2 more)
Src/BeepManager/: BeepManager.cpp  BeepManager.hpp
Src/Controller/: Controller.cpp  Controller.hpp  Event.hpp  EventQueue.hpp  PID.hpp
Src/I2C/: TwiDriver.cpp  TwiDriver.hpp
Src/Legacy/: chlib_stub.c  ds18b20.c  ds18b20.h
Src/app/: AppContext.hpp  Event.hpp  app_loop.cpp  app_loop.hpp  event_dispatcher.cpp
Src/app/fw_info/: fw_info.cpp  fw_info.hpp
Src/core/: stm32f0xx_it.cpp
Src/drivers/: Button.hpp  RccDriver.hpp  hardware_init.cpp  hardware_init.hpp
Src/drivers/base/: GpioDriver.hpp  TimDriver.hpp  TwiDriver.cpp  TwiDriver.hpp  UsartDriver.hpp
Src/drivers/devices/ds18b20/: ds18b20.hpp
Src/drivers/devices/ht1621/: ht1621.cpp
Src/ds18b20/: ds18b20.cpp  ds18b20.hpp  fsm_table_visual.md
Src/fsm_test/: my_fsm.cpp  my_fsm.hpp
Src/fw_info/: fw_info.cpp  fw_info.h
Src/ht1621/: ht1621.cpp  ht1621.hpp
Src/services/: services_init.cpp
Src/services/BeepManager/: BeepManager.cpp  BeepManager.hpp
Src/services/ButtonsManager/: ButtonsManager.hpp
Src/services/Controller/: Controller.cpp  Controller.hpp
Src/utils/: Button.hpp  PID.hpp
docs/: board_conf.md  help.ioc
toolchain/gcc/: gcc.cmake  stm32f030k6tx_flash.ld
